# project_tomato

./: README.md  pyproject.toml  requirements.txt  tonghop.css
models/: training_history.npy
src/: data_prep.ipynb  evaluate.py  infer.py  train.py
